Basic website structure

--- a/src/sass/globals/_theme.scss
+++ b/src/sass/globals/_theme.scss
@@ -1,14 +1,10 @@
 // Font imports go here
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,500;0,700;1,200;1,300;1,500;1,700&display=swap');
 
 :root {
     // css variables go here
-    --black: #1a171c;
-    --white: #fbfcf3;
-    --white-gray: #e8e8e8;
-    --gray: #6e6e6e;
-    --beige: #bba69b;
-    --coral: #F38D68;
-    --sage: #CAD49D;
-    --blue: #46B1C9;
+    --black: #000000;
+    --mint: #7db29e;
+    --yellow: #dbdd90;
+    --dark-blue: #44616c;
 }
