--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -4,9 +4,9 @@
     font-weight: 700;
   }
   main {
-    
+    align-content: center;
+    justify-items: center;
+    grid-auto-rows: min-content;
   }
-  footer {
 
-  }
 }
